[package]
name = "fibril_core"
license = "MIT"
version = "0.0.0"
edition = "2021"
authors = ["Jonathan Nadal <jon.nadal@gmail.com>"]
description = "Core types for the Fibril library."

[features]
default = ["std"]

# Provide impls for common standard library types like Vec<T> and HashMap<K, V>.
# Requires a dependency on the Rust standard library.
std = []

[dependencies.serde]
optional = true
version = "1"
features = ["derive"]
