[package]
name = "fibril_core"
license = "MIT OR Apache-2.0"
version = "0.0.2"
edition = "2021"
authors = ["Jonathan Nadal <jon.nadal@gmail.com>"]
description = "Core types for the Fibril library."
repository = "https://github.com/jonnadal/fibril"
readme = "../README.md"
categories = ["algorithms", "concurrency", "development-tools", "network-programming", "simulation"]
keywords = ["actor", "model-checking", "paxos", "raft", "simulation"]

[dependencies.futures]
optional = true
version = "0.3"

[dependencies.serde]
optional = true
version = "1"
features = ["derive"]

[dependencies.serde_json]
optional = true
version = "1"

[dependencies.tracing]
optional = true
version = "0.1"

[dependencies.tokio]
optional = true
version = "1"
features = ["net", "rt-multi-thread", "sync", "time"]

[features]
rt = ["dep:futures", "dep:tokio", "dep:tracing"]
serde = ["dep:serde"]
serde_json = ["dep:serde_json", "serde"]
