[package]
name = "fibril"
license = "MIT"
version = "0.0.0"
edition = "2021"
authors = ["Jonathan Nadal <jon.nadal@gmail.com>"]
description = "A library for implementing distributed systems with commmunicating fibers."

[dependencies]
corosensei = "0.1"
fibril_core = { path = "../core", version = "0" }

[dependencies.tracing]
optional = true
version = "0.1"

[features]
serde = ["fibril_core/serde"]
