[package]
name = "fibril"
license = "MIT OR Apache-2.0"
version = "0.0.2"
edition = "2021"
authors = ["Jonathan Nadal <jon.nadal@gmail.com>"]
description = "A library for implementing distributed systems with commmunicating fibers."
repository = "https://github.com/jonnadal/fibril"
readme = "../../README.md"
categories = ["algorithms", "concurrency", "development-tools", "network-programming", "simulation"]
keywords = ["actor", "model-checking", "paxos", "raft", "simulation"]

[dependencies]
corosensei = "0.1"
fibril_core = { path = "../fibril_core", version = "0" }

[features]
serde = ["fibril_core/serde"]
serde_json = ["fibril_core/serde_json"]
rt = ["fibril_core/rt"]
