[package]
name = "fibril"
license = "MIT OR Apache-2.0"
version = "0.0.7"
edition = "2021"
authors = ["Jonathan Nadal <jon.nadal@gmail.com>"]
description = "A library for implementing distributed systems with commmunicating fibers."
repository = "https://github.com/jonnadal/fibril"
readme = "../../README.md"
categories = ["algorithms", "concurrency", "development-tools", "network-programming", "simulation"]
keywords = ["actor", "model-checking", "paxos", "raft", "simulation"]

[build-dependencies]
rustc_version = "0.4.0"
    #^ This build dependency can be removed once doc_auto_cfg stabilizes.

[dependencies]
fibril_core = { path = "../fibril_core", version = "0" }

[dependencies.corosensei]
optional = true
version = "0.1"

[dependencies.futures]
optional = true
version = "0.3"

[dependencies.serde]
optional = true
version = "1"
features = ["derive"]

[dependencies.serde_json]
optional = true
version = "1"

[dependencies.tracing]
optional = true
version = "0.1"

[dependencies.tokio]
optional = true
version = "1"
features = ["net", "rt-multi-thread", "sync", "time"]

[features]
fibers = ["dep:corosensei"]
    #^ Include support for fibers.
rt = ["dep:futures", "dep:tokio", "dep:serde", "dep:tracing"]
    #^ Include a UDP runtime.
serde_json = ["dep:serde_json"]
    #^ Include a new_with_serde_json helper in the UDP runtime.

[package.metadata.docs.rs]
all-features = true
