[package]
name = "fibril_core"
license = "MIT OR Apache-2.0"
version = "0.0.5"
edition = "2021"
authors = ["Jonathan Nadal <jon.nadal@gmail.com>"]
description = "Core types for the Fibril library."
repository = "https://github.com/jonnadal/fibril"
readme = "../../README.md"
categories = ["algorithms", "concurrency", "development-tools", "network-programming", "simulation"]
keywords = ["actor", "model-checking", "paxos", "raft", "simulation"]

[build-dependencies]
rustc_version = "0.4.0"
    #^ This build dependency can be removed once doc_auto_cfg stabilizes.

[dependencies.serde]
optional = true
version = "1"
features = ["derive"]

[features]
default = ["std"]
serde = ["dep:serde"]
    #^ Include Serialize/Deserialize implementations for Command/Effect/Id.
std = []
    #^ Provide impls for common standard library types like Vec<T> and HashMap<K, V>.
    #^ Requires a dependency on the Rust standard library.

[package.metadata.docs.rs]
all-features = true
