[package]
name = "fibril_verifier"
license = "MIT OR Apache-2.0"
version = "0.0.6"
edition = "2021"
authors = ["Jonathan Nadal <jon.nadal@gmail.com>"]
description = "Verifies behavior for distributed systems implemented with the Fibril library."
repository = "https://github.com/jonnadal/fibril"
readme = "../../README.md"
categories = ["algorithms", "concurrency", "development-tools", "network-programming", "simulation"]
keywords = ["actor", "model-checking", "paxos", "raft", "simulation"]

[dependencies]
colorful = "0.2"
consistency_model = { path = "../consistency_model", version = "0" }
fibril = { path = "../fibril", version = "0", features = ["fibers", "rt", "serde_json"] }
fibril_core = { path = "../fibril_core", version = "0", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
vector_clock = { path = "../vector_clock", version = "0", features = ["serde"] }
